Cherry-pick c9e35ddc3cab. rdar://problem/105677398

REGRESSION (iOS 16.4 Public Beta) getUserMedia ignores facingMode constraint
    https://bugs.webkit.org/show_bug.cgi?id=252560
    rdar://problem/105677398

    Reviewed by Eric Carlson.

    We added a way to favor some back cameras (those that have a great focal range) against other back cameras.
    We did this by increasing the facingMode fitness distance for the telephoto back cameras.

    The base fitness distance for user/environment facingMode constraint is either 0 (match) or 1 (no match).
    When facingMode is environement, the front camera will have a base fitness distance of 1 and a final fitness distance of 1.

    The back camera will have a base fitness distance of 0 and a final fitness distance of 0 + the fitness distance increase.
    The fitness distance increase is either 0, 1, 2...

    The issue is that RealtimeMediaSource::supportsConstraints computes the fitness score by checking whether distance is 0 or something else.
    If distance is 0, the score is 32 otherwise it is 1.
    This ensures that facingMode has a big weight on the global fitness score.

    We now apply facingModeFitnessDistanceAdjustment directly to the global fitness score.
    This requires having good devices with a high value.

    Renaming facingModeFitnessDistanceAdjustment to facingModeFitnessScoreAdjustment for that reason.

    * Source/WebCore/platform/mediastream/RealtimeMediaSource.cpp:
    (WebCore::RealtimeMediaSource::fitnessDistance):
    (WebCore::RealtimeMediaSource::supportsConstraints):
    * Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.mm:
    (WebCore::AVVideoCaptureSource::facingModeFitnessDistanceAdjustment const):

    Canonical link: https://commits.webkit.org/260953@main

Canonical link: https://commits.webkit.org/259548.364@safari-7615-branch